objects/Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Likely_to_Recommend__c</fullName>
        <label>Likely to Recommend</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limited_Eligibility__c</fullName>
        <label>Limited Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>City/Country setting, Landmarks, Street corner.</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLP_Pages__c</fullName>
        <inlineHelpText>MLP Pages the dealership wants optimized as part of Perfomance/SEO Essentials.</inlineHelpText>
        <label>MLP Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_1_Required_Steps_Date__c</fullName>
        <inlineHelpText>The date the Onboarding Month Required or Optional Steps field was checked.</inlineHelpText>
        <label>Month 1 Required Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_1_Required_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For more information, review the current onboarding process documents available on SEO Sharepoint.</inlineHelpText>
        <label>Month 1 Required Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_2_Required_Steps_Date__c</fullName>
        <inlineHelpText>The date the Onboarding Month Required or Optional Steps field was checked.</inlineHelpText>
        <label>Month 2 Required Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_2_Required_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For more information, review the current onboarding process documents available on SEO Sharepoint.</inlineHelpText>
        <label>Month 2 Required Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_3_Optional_Steps_Date__c</fullName>
        <inlineHelpText>The date the Onboarding Month Required or Optional Steps field was checked.</inlineHelpText>
        <label>Month 3 Optional Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_3_Optional_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For more information, review the current onboarding process documents available on SEO Sharepoint.</inlineHelpText>
        <label>Month 3 Optional Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_3_Required_Steps_Date__c</fullName>
        <inlineHelpText>The date the Onboarding Month Required or Optional Steps field was checked.</inlineHelpText>
        <label>Month 3  Required Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_3_Required_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For more information, review the current onboarding process documents available on SEO Sharepoint.</inlineHelpText>
        <label>Month 3 Required Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_5_Optional_Steps_Date__c</fullName>
        <inlineHelpText>The date the Onboarding Month Required or Optional Steps field was checked.</inlineHelpText>
        <label>Month 5 Optional Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_5_Optional_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For more information, review the current onboarding process documents available on SEO Sharepoint.</inlineHelpText>
        <label>Month 5 Optional Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Facebook_Spend__c</fullName>
        <label>Monthly Facebook Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Next_Action_Due__c</fullName>
        <inlineHelpText>Shows the next due date for items created by the specialist.</inlineHelpText>
        <label>My Next Action Due</label>
        <summarizedField>Monthly_Maintenance__c.Action_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.Open_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.Action_Type__c</field>
            <operation>equals</operation>
            <value>User Generated</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Action_Due__c</fullName>
        <inlineHelpText>This is the next due Action Item listed below in the Open Strategy section.</inlineHelpText>
        <label>Next Action Due</label>
        <summarizedField>Monthly_Maintenance__c.Action_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.Open_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Call_Scheduled__c</fullName>
        <label>Next Call Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>This field will be displayed in a report that may be viewed by our clients.</inlineHelpText>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Dealers_in_LMA__c</fullName>
        <label># of Dealers in LMA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Performing_GEOs__c</fullName>
        <inlineHelpText>The GEOs you have decided not to go after.  These have been removed due to little success/traffic.</inlineHelpText>
        <label>Non-Performing GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OEM_Area__c</fullName>
        <formula>WebID__r.OEM_Area__c</formula>
        <label>OEM Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Contact_Opt_Out__c</fullName>
        <label>OEM Contact Opt-Out</label>
        <picklist>
            <picklistValues>
                <fullName>Opt-In</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OEM_Contact_Primary__c</fullName>
        <description>Primary contact at the OEM for QBR calls or any other call interaction</description>
        <inlineHelpText>Primary contact at the OEM for QBR calls or any other call interaction</inlineHelpText>
        <label>OEM Contact - Primary</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Contact_Secondary__c</fullName>
        <description>Secondary contact at the OEM for QBR calls or any other call interaction</description>
        <inlineHelpText>Secondary contact at the OEM for QBR calls or any other call interaction</inlineHelpText>
        <label>OEM Contact - Secondary</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Contact_Service_DM__c</fullName>
        <description>OEM Contact - Service District Manager</description>
        <inlineHelpText>OEM Contact - Service District Manager</inlineHelpText>
        <label>OEM Contact - Service DM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OMS_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>OMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Off_No_Send_List_Calc__c</fullName>
        <description>This field feeds the Off No Send List formula. If the result of this field is greater than 0, then the Off No Send List will calculate “Yes”, otherwise it’s “No.”</description>
        <label>Off No Send List Calc</label>
        <summarizedField>Monthly_Maintenance__c.Off_No_Send_List_Calc__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.This_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Off_No_Send_List__c</fullName>
        <description>Fed by the Off No Send List Rollup, which is fed by some monthly maintenance fields. This may be off if the MM Update doesn&apos;t properly update the This Month field or the email counts on the EMS Strategy record type.</description>
        <formula>IF( Off_No_Send_List_Calc__c &gt;0,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <inlineHelpText>This will read &quot;Yes&quot; if any email campaigns are listed greater than 0 in the current month&apos;s Action Item in the Strategy section. This is updated nightly.</inlineHelpText>
        <label>Off No Send List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Action_Calc__c</fullName>
        <description>This field feeds the Open Action Items formula field. This field will populate with a count &gt; 0 if there are open Action Items in the Open Strategy section.</description>
        <label>Open Action Calc</label>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.Open_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Action_Items__c</fullName>
        <formula>IF( Open_Action_Calc__c &gt;0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>If there are Open Action Items in the Open Strategy section, this field will read &quot;Yes.&quot;</inlineHelpText>
        <label>Open Action Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Onboarding_Case__c</fullName>
        <description>This field is only intended for the AA Account Plan layout. The field will be calculated in a nightly process, but it will be left open from a FLS perspective to allow people to adjust before the nightly update.</description>
        <inlineHelpText>This field displays whether or not there is an open onboarding case of any type on the webid, and is updated by a program every evening.</inlineHelpText>
        <label>Open Onboarding Case</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by a stored procedure that looks at related Account Plan records with record type PIC Account Plan on the webid.</description>
        <inlineHelpText>This link will open the PIC Specialist’s Account Plan on this webid.</inlineHelpText>
        <label>PIC Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans (PIC Account Plan Link)</relationshipLabel>
        <relationshipName>PIC_Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>This field is only visible to the IFS and EMS profiles.</inlineHelpText>
        <label>Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Perceived_Reputation__c</fullName>
        <inlineHelpText>How is the dealer perceived by the overall community, online reviews, peer reviews, etc.</inlineHelpText>
        <label>Perceived Reputation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Consultant2__c</fullName>
        <formula>Account__r.Performance_Improvement_Consultant_User__r.FirstName &amp;&quot; &quot;&amp; Account__r.Performance_Improvement_Consultant_User__r.LastName &amp; &quot; &quot;&amp; 
IF(ISBLANK(Account__r.Performance_Improvement_Consultant_User__r.Phone), Account__r.Performance_Improvement_Consultant_User__r.MobilePhone ,Account__r.Performance_Improvement_Consultant_User__r.Phone)</formula>
        <label>Performance Improvement Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Consultant__c</fullName>
        <formula>WebID__r.Performance_Improvement_Consultant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Improvement Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Hurt__c</fullName>
        <label>Personal Hurt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Polk_Brand_Radius__c</fullName>
        <inlineHelpText>Polk Report Brand and Radius. Information should be maintained in both DAP and SF.</inlineHelpText>
        <label>Polk Brand/Radius</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polk_Contact_Status__c</fullName>
        <label>Polk Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Email Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Polk_Flag__c</fullName>
        <description>Polk Report flag for PowerBrand. Informational only. Flag maintained in DAP tool.</description>
        <inlineHelpText>Polk Report flag. Flag should be maintained in DAP tool.</inlineHelpText>
        <label>Polk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PowerBrandFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be filled in during the nightly process. The field will be TRUE if the dealer has PowerBrand and FALSE if not.</description>
        <label>Power Brand Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the SEO Specialist.  If the webid does not have the PowerSEO Product, the field will list “N/A.”  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a SEO Specialist listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>PowerSEO Date Last Teamed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Date__c</fullName>
        <description>This field is populated by the Update – PowerSEO Help List Date workflow and cleared by the Update – PowerSEO Help List Removed workflow.</description>
        <inlineHelpText>The date the dealership was added to the help list.</inlineHelpText>
        <label>PowerSEO Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Description__c</fullName>
        <description>The workflow Update –PSEO Help List Removed will clear this field once the dealer is removed from the help list.</description>
        <label>PowerSEO Help List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Manager_Comments__c</fullName>
        <inlineHelpText>This field is only visible to Service Management.</inlineHelpText>
        <label>PowerSEO Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Reason__c</fullName>
        <description>The workflow Update –PSEO Help List Removed will clear this field once the dealer is removed from the help list.</description>
        <label>PowerSEO Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party/Competitor Interference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt is secondary domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer says Sales misrepresented product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Personnel Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voiced Ranking Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voiced Traffic Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Teaming Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving Cobalt entirely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not competitive with other dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan to move money to a different product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Inability to Demonstrate ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Lack of Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI – results not good enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Down at Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealistic Expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PowerSEO Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Regional_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Regional Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Area__c</fullName>
        <label>Primary Market Area</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Secondary__c</fullName>
        <inlineHelpText>If Secondary value is selected please feel out Vendor field.</inlineHelpText>
        <label>Primary / Secondary</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Specialist_Is_Me__c</fullName>
        <description>This is not intended for display on page layouts - just for View and report calculations.</description>
        <formula>IF( $User.Id =  Primary_Specialist__c  , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Primary Specialist Is Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Plus/Advanced RepMan team would like a field to track who the primary person is who handles the call requirements for the account. The Account Plan Owner field should still be the queue.</description>
        <label>Primary Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is maintained through the nightly process and may lag behind the WebID indicator by one day.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Mix__c</fullName>
        <description>This information is populated by a stored procedure that looks at Installed Base Items and Service Contracts to determine what the customer has.  The calculation varies by record type.</description>
        <inlineHelpText>This is calculated from Installed Base and Service Contracts.  Updated nightly.</inlineHelpText>
        <label>Product Mix</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>This is populated by a stored procedure that calculates account level product mix pertaining to specific product sets.</description>
        <inlineHelpText>Account Level Digital Advertising and Reputation Management product mix.  Updated nightly.</inlineHelpText>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts and Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCare SEO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Business_Review__c</fullName>
        <description>This field is updated each evening via a stored procedure. The calculation is based on 90 days from the view date. The calculation is not based on a set calendar; a call is required every 90 days.</description>
        <inlineHelpText>If the WebID has the GM Performance package, a QBR call with Type “Spoke To” is required every 90 days. This field is updated on a nightly basis.</inlineHelpText>
        <label>Quarterly Business Review</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Call_Schedule__c</fullName>
        <label>Quarterly Call Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Jan/Apr/Jul/Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb/May/Aug/Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar/Jun/Sep/Dec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Engagement__c</fullName>
        <description>This field is calculated each evening in a stored procedure. The calculation is based on 90 days from the view date. It is not a set calendar quarter.</description>
        <inlineHelpText>This is the maximum Role grouping of “Spoke To” Type calls in the last 90 days. If calls were logged with both Primary ProCare and Dealer Principal contacts, then the value will show “Qtr Engaged – DP/GM.” This is calculated and updated each evening.</inlineHelpText>
        <label>Quarterly Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Not Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qtr Engaged – PPC/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qtr Engaged – DP/GM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Health_Status__c</fullName>
        <description>Based on whether or not the Last Email Health Update took place in the last 90 days.</description>
        <formula>IF(OR(ISBLANK( Last_Email_Health_Update__c ),  Last_Email_Health_Update__c &lt; (TODAY()-90)),&quot;Recommended&quot;, &quot;Completed&quot;)</formula>
        <inlineHelpText>Based on whether or not the Last Email Health Update took place in the last 90 days.</inlineHelpText>
        <label>Quarterly Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Last_Updated__c</fullName>
        <label>RFP Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by a stored procedure that looks at related Account Plan records with record type RMS Account Plan or RM Advanced Account Plan on the account.</description>
        <inlineHelpText>This link will open the Reputation Management Account Plan on this account.  If the customer has Advanced or Primary Plus the Account Plan Link will be populated, but the Reputation Management Specialist field will be blank.</inlineHelpText>
        <label>RMS Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans (RMS Account Plan Link)</relationshipLabel>
        <relationshipName>RMS_Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Reputation Management Specialist.  If the webid does not have a Reputation Management product, the field will list “N/A.”  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a Reputation Management Specialist listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>RMS Date Last Teamed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>RMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_ListF__c</fullName>
        <formula>WebID__r.RepMan_Help_List__c</formula>
        <inlineHelpText>Shows value entered on WebID for field of the same name.</inlineHelpText>
        <label>RepMan Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_DateF__c</fullName>
        <formula>WebID__r.RepMan_Help_List_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RepMan Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Date__c</fullName>
        <description>The workflow Update – RepMan Help List Add and Update – RepMan Help List Remove help populate and clear this field depending on what the RepMan Help List indicator is set to.</description>
        <inlineHelpText>The date the dealership was placed on the help list.</inlineHelpText>
        <label>RepMan Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Description__c</fullName>
        <inlineHelpText>The workflow Update – RepMan Help List Removed will clear this field once the dealer is removed from the help list.</inlineHelpText>
        <label>RepMan Help List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Manager_Comments__c</fullName>
        <inlineHelpText>This field is only visible to Service Management.</inlineHelpText>
        <label>RepMan Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_ReasonF__c</fullName>
        <formula>TEXT(WebID__r.RepMan_Help_List_Reason__c)</formula>
        <inlineHelpText>Shows value entered on WebID for field of the same name.</inlineHelpText>
        <label>RepMan Help List Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Reason__c</fullName>
        <description>The workflow Update – RepMan Help List Removed will clear this field once the dealer is removed from the help list.</description>
        <label>RepMan Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Places Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI - results not good enough</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>